# judicial-jury-keys

./: .gitignore  Cargo.toml  docker-compose.yml  nginx.conf  readme.md
db-init/: 01_create_tables.sql
jjk-db/: Cargo.toml
jjk-front/: README.md  dockerfile  package.json  vite.config.js
jjk-front/src/: App.vue
jjk-front/src/router/: index.js
jjk-front/src/views/: buffet.vue  prosecOff.vue
jjk-rx/: .env  Cargo.toml  dockerfile
jjk-rx/settings/: development.yaml
jjk-rx/src/: jjk_rx_back.rs  lib.rs  main.rs  prelude.rs  settings.rs  telemetry.rs
jjk-rx/src/db/: db_component.rs  mod.rs  model.rs  tables.sql
jjk-rx/src/domain/: mod.rs
jjk-rx/src/encryption/: decrypter.rs  mod.rs
jjk-rx/src/routes/: handlers.rs
jjk-rx/src/storage/: database.rs
jjk-tx/: Cargo.toml  dockerfile
jjk-tx/settings/: development.yaml
jjk-tx/src/: lib.rs  main.rs  prelude.rs  telemetry.rs
jjk-tx/src/encryption/: encrypter.rs  mod.rs
jjk-tx/src/pdf/: mod.rs  parser.rs
jjk-tx/src/routes/: mod.rs  upload.rs
jjk-tx/src/transmission/: encryption.rs  mod.rs  transmitter.rs
