[package]
name = "jjk-tx"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
aes-gcm = "0.10.3"
base64 = "0.22.1"
rand = "0.9.2"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
