[package]
name = "jjk-tx"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-multipart = "0.7.2"
actix-web = "4.12.1"
aes-gcm = "0.10.3"
anyhow = "1.0.101"
base64 = "0.22.1"
chrono = "0.4.43"
clearscreen = "4.0.3"
colorize = "0.1.0"
config = { version = "0.15.19", features = ["yaml"] }
futures = "0.3.31"
rand = "0.8.0"
reqwest = { version = "0.13.1", features = ["json"] }
rsa = "0.9.10"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["time", "env-filter", "fmt", "std", "tracing-log", "chrono"] }
